--- a/src/components/style.css
+++ b/src/components/style.css
@@ -62,11 +62,6 @@
   max-width: 300px;
 }
 
-
-
-
-
-
 .card-price {
   font-size: 18px;
   letter-spacing: 0.3px;
@@ -79,10 +74,6 @@
 
 
 
-
-
-
-
 /* Card style */
 .card {
   background: #fff;
@@ -91,7 +82,7 @@
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   position: relative;
-  height: 100%;
+  height: auto
 }
 
 .card:hover {
@@ -134,12 +125,28 @@
   margin-bottom: 10px;
 }
 
+
+
 .card-description {
-  font-size: 14px;
+  font-size: 12px;
   color: #555;
   line-height: 1.5;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
+  height: 10%;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
 }
+
+.card-rating{
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    margin: 4px;
+}
+
 
 .card-read {
   font-size: 14px;
@@ -154,9 +161,21 @@
 
 /* Image inside the card */
 .card-media {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
+    margin: 25px;
+    width: 85%;
+    object-fit: contain;
+}
+
+.btn{
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+    margin: 5px;
+}
+.btn:hover{
+    color: #32c45e;
 }
 
 /* Order Now tag */
